--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div class="max-w-4xl mx-auto">
             <!-- Header -->
             <div class="text-center mb-8">
-                <h1 class="text-3xl md:text-4xl font-bold text-gray-800 mb-2">NDENGKOT HIJAB</h1>
+                <h1 class="text-3xl md:text-4xl font-bold text-gray-800 mb-2">NDENGKOT COLLECTION</h1>
                 <p class="text-gray-600"> </p>
             </div>
                 <div class="md:flex">
